kubernetes-demo.yaml
# Run this command to start the app: kubectl port-forward --address 0.0.0.0 deployment/kubernetes-demo 8081:8081
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-demo-svc
spec:
  type: NodePort
  selector:
    app: kubernetes-demo
  ports:
    - port: 8081
      nodePort: 30001
      #targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes-demo
  template:
    metadata:
      labels:
        app: kubernetes-demo
    spec:
      containers:
      - image: dheeratp/kubernetes-demo:1
        name: kubernetes-demo-container
